Добавлено фото Дементьев

--- a/index.html
+++ b/index.html
@@ -382,6 +382,14 @@
           </li>
           <li class="speakers-item">
             <figure class="thumbnail">
+              <img src="img/eugeny.jpeg" class="img-responsive" alt="Евгений Дементьев" loading="lazy">
+              <figcaption class="caption text-center">
+                <h3>Евгений Дементьев<small class="company-name">X-Cart</small></h3>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="speakers-item">
+            <figure class="thumbnail">
               <img src="img/ermakov.jpg" class="img-responsive" alt="Денис Ермаков" loading="lazy">
               <figcaption class="caption text-center">
                 <h3>Денис Ермаков<small class="company-name"><abbr title="Ростелеком Информационные Технологии">РТК ИТ</abbr></small></h3>
