--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="yandex-verification" content="89f06b2459340d7b" />
     <meta property="og:title" content="Fronthub 2019"/>
     <meta property="og:url" content="//fronthub.ru"/>
     <meta property="og:image" content="//fronthub.ru/img/logo.png"/>
