--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@
         margin-left: 24px;
       }
 
+      .youtube-player {
+        display: flex;
+        justify-content: center;
+      }
 
       @media (min-width: 1600px) {
         .map-container {
@@ -294,6 +298,12 @@
           <li><a href="https://fronthub.timepad.ru/event/1091724/" target="_blank">Зарегистрироваться</a></li>
         </ul>
       </nav>
+
+      <br>
+      <div class="youtube-player">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VVR33MZHKjQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <br>
 
       <section class="about">
         <h2>О конференции</h2>
