--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             <img class="js-icon-replace" id="rostelek" src="img/rostelek.svg" alt="Ростелеком ИТ" height="100px" title="Ростелеком ИТ">
           </li>
           <li class="sponsors-item">
-            <img src="img/logo.png" alt="Fronthub" height="100px" title="Fronthub">
+            <img src="img/log0.png" alt="Fronthub" height="100px" title="Fronthub">
           </li>
           <li class="sponsors-item">
             <img class="js-icon-replace" id="taxdom" src="img/taxdom.svg" alt="ТаксДом" height="100px" title="ТаксДом">
