--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="yandex-verification" content="89f06b2459340d7b" />
     <meta property="og:title" content="Fronthub 2019"/>
     <meta property="og:url" content="//fronthub.ru"/>
-    <meta property="og:image" content="https://internal-production-storage.s3.us-east-2.amazonaws.com/store/5b8b07009d5f4d06b4c08036a4e92186.png"/>
+    <meta property="og:image" content="//fronthub.ru/img/logo.png"/>
     <meta
         property="og:description"
         content="Конференция по front-end. Вход бесплатный."
@@ -506,7 +506,7 @@
             <img class="js-icon-replace" id="rostelek" src="img/rostelek.svg" alt="Ростелеком ИТ" height="100px" title="Ростелеком ИТ">
           </li>
           <li class="sponsors-item">
-            <img src="img/log0.png" alt="Fronthub" height="100px" title="Fronthub">
+            <img src="img/logo.png" alt="Fronthub" height="100px" title="Fronthub">
           </li>
           <li class="sponsors-item">
             <img class="js-icon-replace" id="taxdom" src="img/taxdom.svg" alt="ТаксДом" height="100px" title="ТаксДом">
