--- a/no.htm
+++ b/no.htm
@@ -10,20 +10,14 @@
     src="chrome-extension://nhpjggchkhnlbgdfcbgpdpkifemomkpg/pageScripts/main.js"
   ></script>
   <head>
+    <meta name="yandex-verification" content="89f06b2459340d7b" />
+    <meta property="og:title" content="Fronthub 2019"/>
+    <meta property="og:url" content="//fronthub.ru"/>
+    <meta property="og:image" content="//fronthub.ru/img/logo.png"/>
     <meta
-      property="og:title"
-      content="No Entrepreneur is an Island / Dualboot Partners"
+        property="og:description"
+        content="Конференция по front-end. Вход бесплатный."
     />
-    <meta
-      property="og:url"
-      content="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
-    />
-    <meta
-      property="og:image"
-      content="https://internal-production-storage.s3.us-east-2.amazonaws.com/store/9bff844043ad129896dc64e148cc0e46.jpg"
-    />
-    <meta property="og:description" content="We Build Great Software" />
-    <meta property="og:type" content="article" />
     <meta name="csrf-param" content="authenticity_token" />
     <script
       async=""
