--- a/no.htm
+++ b/no.htm
@@ -10,14 +10,11 @@
     src="chrome-extension://nhpjggchkhnlbgdfcbgpdpkifemomkpg/pageScripts/main.js"
   ></script>
   <head>
-    <meta name="yandex-verification" content="89f06b2459340d7b" />
-    <meta property="og:title" content="Fronthub 2019"/>
-    <meta property="og:url" content="//fronthub.ru"/>
-    <meta property="og:image" content="//fronthub.ru/img/logo.png"/>
-    <meta
-        property="og:description"
-        content="Конференция по front-end. Вход бесплатный."
-    />
+    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+    <meta property="og:description"        content="How much does culture influence creative thinking?" />
+    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <meta name="csrf-param" content="authenticity_token" />
     <script
       async=""
