changed og order

--- a/no.htm
+++ b/no.htm
@@ -10,12 +10,7 @@
     src="chrome-extension://nhpjggchkhnlbgdfcbgpdpkifemomkpg/pageScripts/main.js"
   ></script>
   <head>
-    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
-    <meta property="og:description"        content="How much does culture influence creative thinking?" />
-    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
-    <meta name="csrf-param" content="authenticity_token" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script
       async=""
       src="./No Entrepreneur is an Island _ Dualboot Partners_files/js"
@@ -72,6 +67,11 @@
       rel="canonical"
       href="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
     />
+    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+    <meta property="og:description"        content="How much does culture influence creative thinking?" />
+    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <meta
       name="csrf-token"
       content="2y6q+4LfBB3KRWiu/0dyWLmWAn45iZxE0Oqwz7qoGayDl6ystrzctmHWst2QQBpqsv154aPpWo+7NEe+O4GAnA=="
