--- a/no.htm
+++ b/no.htm
@@ -69,8 +69,8 @@
     />
     <meta property="og:title"              content="No Entrepreneur is an Island / Dualboot Partners" />
     <meta property="og:url"                content="https://en.dualboot.ru/insights/noentrepreneur_is_an_island" />
-    <meta property="og:image"              content="https://internal-production-storage.s3.us-east-2.amazonaws.com/store/5b8b07009d5f4d06b4c08036a4e92186.png" />
-    <meta property="og:description"        content="We Build Great Software" />
+    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="og:description"        content="How much does culture influence creative thinking?" />
     <meta property="og:type"               content="article" />
     <meta
       name="csrf-token"
