--- a/no.htm
+++ b/no.htm
@@ -67,7 +67,7 @@
       rel="canonical"
       href="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
     />
-    <meta property="og:title"              content="No Entrepreneur is an Island. Dualboot Partners" />
+    <meta property="og:title"              content="No Entrepreneur is an Island" />
     <meta property="og:url"                content="https://en.dualboot.ru/insights/noentrepreneur_is_an_island" />
     <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <meta property="og:description"        content="How much does culture influence creative thinking?" />
