--- a/no.htm
+++ b/no.htm
@@ -68,7 +68,7 @@
       href="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
     />
     
-    <meta property="og:url"                content="https://en.dualboot.ru/insights/noentrepreneur_is_an_island" />
+    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="No Entrepreneur is an Island" />
     <meta property="og:description"        content="How much does culture influence creative thinking?" />
