--- a/no.htm
+++ b/no.htm
@@ -68,11 +68,11 @@
       href="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
     />
     
-    <meta property="og:url"                content="https://www.en.dualboot.ru/insights/noentrepreneur_is_an_island" />
+    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="No Entrepreneur is an Island" />
-    <meta property="og:description"        content="How much does culture influence creative thinking?" />
-    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="og:title"              content="No Entrepreneur is an Island / Dualboot Partners" />
+    <meta property="og:description"        content="We Build Great Software" />
+    <meta property="og:image"              content="https://internal-production-storage.s3.us-east-2.amazonaws.com/store/9bff844043ad129896dc64e148cc0e46.jpg" />
     
     <meta
       name="csrf-token"
