--- a/no.htm
+++ b/no.htm
@@ -65,7 +65,7 @@
     <meta name="description" content="We Build Great Software" />
     <link
       rel="canonical"
-      href="https://en.dualboot.ru/insights/noentrepreneur_is_an_island"
+      href="https://fronthub.ru/no.htm"
     />
     
     <!-- <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" /> -->
