--- a/no.htm
+++ b/no.htm
@@ -68,7 +68,7 @@
       href="https://fronthub.ru/no.htm"
     />
     
-    <!-- <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" /> -->
+    <meta property="og:url"                content="https://fronthub.ru/no.htm" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="No Entrepreneur is an Island / Dualboot Partners" />
     <meta property="og:description"        content="We Build Great Software" />
